resolved the invoice medicine name overlapping issue and alignement issue and also changed invoice, proforma, purchased order design

--- a/src/Supplier/components/Inquiry/PurchasedOrder/PurchasedOrderDetails.module.css
+++ b/src/Supplier/components/Inquiry/PurchasedOrder/PurchasedOrderDetails.module.css
@@ -42,7 +42,7 @@
     width: 100%;
     justify-content: space-between;
     align-items: baseline;
-    border-bottom: 1px dotted #333;
+    border-bottom:  1px solid #616161;
   }
   .purchange-logo{
     width: 80px;
